# ARK-4

./: .gitattributes  .gitignore  .gitmodules  1  ARK4-presentation.pptx  CHANGELOG  CHANGELOG.md  CREDITS  CREDITS.md  INFO.md  ISSUES.md  Makefile  README  README.md  TODO  a.out  build.sh  cleandeps.py  findtext.py  mkpsxiso-2.03-Linux.deb  out  tabs2space.py
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.yml  ISSUE_TEMPLATE.yml
.github/workflows/: ark.yml  c-cpp.yml  pr.yml  python3.yml
cipl/installer/: pspipl_update.h
common/: flashpatch.c  functions.c  nidmap.txt  vita_mem.c
common/include/: ansi_c_functions.h  ark.h  flashpatch.h  functions.h  gameinfo.h  globals.h  kermit.h  kubridge.h  macros.h  module2.h  psid.h  psperror.h  pspinit.h  pspusbdevice.h  rc4.h  rebootconfig.h  sdk.h  strhex32.h  strsafe.h  systemctrl.h  systemctrl_private.h  systemctrl_se.h  version.h  vita_mem.h  vshctrl.h
common/make/: beauty.mak  beauty_bin.mak  beauty_gendep.mak  beauty_lib.mak  beauty_stub.mak  build_ipl.mak  check.mak  exploit_config.mak  global.mak  mod_enc.mak  quiet.mak
common/utils/: functions.c  imports.c  patches.c  scanner.c
contrib/: PLUGINS.TXT  PSPLibDoc_1.50.xml  README.TXT  SETTINGS.TXT  nidmap.txt  psplibdoc_660.xml
contrib/PC/ciso/ziso_compressor/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_ZSO.md  tc-win64.cmake
contrib/PC/ciso/ziso_compressor/include/: banner.h  ziso.h
contrib/PC/ciso/ziso_compressor/lib/: CMakeLists.txt
contrib/PC/ciso/ziso_compressor/src/: CMakeLists.txt  ziso.cpp
contrib/PSP/: f0-kd-interruptman.prx  f0-kd-mediasync.prx  f0-kd-modulemgr.prx  f0-kd-np9660.prx  f0-kd-popsman.prx  f0-kd-popsman180.prx  fake.cso  libfont_hv.prx  libpspvmc.prx  mediasync.s  pops.prx  pops_01g.prx  popsman.s  psp-npdrm.prx  qsplink.prx
contrib/PSP/emuhook/: CMakeLists.txt  emuhook.skprx  emuhook.yml
contrib/PSP/emuhook/src/: main.c
core/: README.txt
core/compat/: README.md
core/galaxy/: Makefile  README  export.exp  galaxy.h  imports.S  main.c
core/inferno/: Makefile  README  README.txt  SystemCtrlForKernel.S  exports.exp  imports.S  inferno.h  iodrv_funcs.c  isocache.c  isoread.c  main.c  umd.c
core/popcorn/: Makefile  README  exports.exp  icon.c  imports.S  libcrypt.c  main.c
core/pspcompat/: Makefile  README  cpuclock.c  flashinstall.c  high_mem.c  high_mem.h  imports.S  main.c  syspatch.c
core/rebootex/: Makefile  README  lib.c  linkfile.l  main.c  payload.h  pspbtcnf.c  psv_patches.c  rebootex.h  rebootex_psp.c  rebootex_psv.c
core/stargate/: Makefile  chn_iso.c  exports.exp  gamefix.c  hide.c  imports.S  io_patch.c  key_decrypt.c  loadmodule_patch.c  loadmodule_patch.h  main.c  nodrm_patch.c  pspcipher.c  pspcipher.h
core/systemctrl/: Makefile  README  exception_asm.S  exports.exp  imports.S  main.c  setlongjmp.S  systemctrl.S
core/vitacompat/: Makefile  README  exitgame.c  exitgame.h  exports.exp  filesystem.c  filesystem.h  gameinfo.c  imports.S  main.c  popspatch.c  psxspu.c  psxspu.h  syspatch.c  vitaflash.c  vitaflash.h  vitamem.c  vitamem.h
core/vitapops/: Makefile  README  exports.exp  imports.S  main.c  popsdisplay.c  popsdisplay.h  syspatch.c  vitapops.c  vitapops.h
core/vshctrl/: .usbdevice.c.swp  Makefile  README  custom_update.c  dirent_track.c  dirent_track.h  disctype.c  exports.exp  hibernation_delete.c  imports.S  isoreader.c  isoreader.h  main.c  main.h  registry.c  registry.h  smallvid.h  usbdevice.c  virtual_mp4.c  virtual_pbp.c  virtual_pbp.h  vshmenu.c  vshpatch.c  xmbiso.c  xmbiso.h
extras/: savedata_patch.c
extras/idsregeneration/: aes.h  aes_locl.h  e_os2.h  exports.exp  hwconfig.h  idsregeneration.h  lcd.h  magicgate.h  main.c  mi.h  region.h  serial.h  unk52.h  usb.h
extras/installer/: Makefile  main.c
extras/kdumper/: Makefile  imports.S  main.c
extras/modules/ef2uma/: CMakeLists.txt  ef2uma.c  ef2uma.suprx  ef2xmc.suprx
extras/peops/: Makefile  main.h  prospu.c
extras/procompat/: Makefile  imports.S  main.c  pro_rebootex.h
extras/savestate/: LICENSE  Makefile  SAVE.PKG  common.h  systemctrl.h
extras/updater/: Makefile  PARAM_GO.SFO  PARAM_PSP.SFO  main.c  packlist.txt
extras/usbdevice/: exports.exp  main.c
extras/xmbctrl/: Makefile  XMB_EN.TXT  XMB_ES.TXT  XMB_LT.TXT  config.c  list.c  list.h  main.c  plugins.c  plugins.h  settings.c  settings.h  stub.S  utils.c
libs/: Makefile
libs/KUBridge/: KUBridge.S  Makefile
libs/SysclibForUser/: Makefile  SysclibForUser.S
libs/SystemCtrlForKernel/: Makefile  SystemCtrlForKernel.S
libs/SystemCtrlForUser/: Makefile  SystemCtrlForUser.S
libs/VshCtrl/: Makefile  VshCtrl.S
libs/ansi-c/: Makefile  colordebugger.c  lowerstring.c  memcmp.c  memcpy.c  memfind.c  memmove.c  memset.c  strbeginswith.c  strcasecmp.c  strchr.c  strcmp.c  strcpy.c  strhex32.c  strlen.c  strreplaceall.c  strsafe.c  strstr.c
libs/colordebugger/: Makefile  colordebugger.c  colordebugger.h
libs/daveeipl/: Makefile  cpu.S  ecc.h  exception.c  kirk.c  kirk.h  led.h  pwm.h  state.h  syscon.c  sysreg.c
libs/graphics/: Makefile  font.c  graphics.c  graphics.h  lib.c  lib.h  readme.txt
libs/guglue/: Makefile  exports.exp  libguglue.S
libs/iplsdk/: Makefile  build.mak  build_lib.mak  cache.S  chip.c  chip.h  comms.c  comms.h  config.h  controlreg.h  cop0.h  cpu.S  cpu.h  crt0.S  delay.S  display.c  display.h  dmacplus.c  dmacplus.h  ecc.c  emcddr.c  emcddr.h  emcsm.c  emcsm.h  exception.c  exception.h  exception_asm.S  fat.c  fat.h  gpio.c  gpio.h  handshake.c  hibari.c  hibari.h  interrupt.c  interrupt.h  kirk.c  kirk.h  (+43 more)
loader/live/kernel/psxloader/ps1cfw_enabler/: CMakeLists.txt  main.h  ps1cfw_enabler.c  ps1cfw_enabler.suprx  ps1cfw_enabler.yml  utils.c
loader/vpk/source/: CMakeLists.txt
loader/vpk/source/res/save/ARK_01234/: FLASH0.ARK  IDSREG.PRX  LANG.ARK  PS1SPU.PRX  RECOVERY.PRX  UPDATER.TXT  USBDEV.PRX  VBOOT.PBP  VSHMENU.PRX  XBOOT.PBP  XMBCTRL.PRX
loader/vpk/source/src/: install.c  install.h  io.c  io.h  main.c  pbp.c  pbp.h  promote.c  promote.h  sha256.c  sha256.h  ui.c  ui.h
(+2343 files in other folders)
